examples/test/testpolicy15644.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15644
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key14: value40
      key5: value46
      key1: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value29
          key40: value32
          key44: value9
      podSelector:
        matchLabels:
          key1: value41
          key48: value26
          key32: value36
